k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: model-pricing
  labels:
    name: model-pricing
    linkerd.io/inject: enabled
